[gd_scene load_steps=8 format=3 uid="uid://dulu0one6cl4i"]

[ext_resource type="Script" path="res://main/main.gd" id="1_a58jx"]
[ext_resource type="Texture2D" uid="uid://b56iyxujulh2t" path="res://main/background.png" id="1_lnon1"]
[ext_resource type="Texture2D" uid="uid://bmdkp881rrotd" path="res://main/wire_box.png" id="2_1d34e"]
[ext_resource type="Texture2D" uid="uid://27canlwxlwh4" path="res://tele_button_unpressed.png" id="3_8anf8"]
[ext_resource type="Texture2D" uid="uid://bav7wocvrid4i" path="res://tele_button_pressed.png" id="4_51g7t"]
[ext_resource type="PackedScene" uid="uid://bxxv0cb2yq86m" path="res://cable/cable.tscn" id="6_gmmhb"]
[ext_resource type="PackedScene" uid="uid://dbi7g6upedkdn" path="res://socket.tscn" id="6_slrjl"]

[node name="root" type="Node2D"]
script = ExtResource("1_a58jx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(531, 328)
scale = Vector2(5.25, 5.25)
texture = ExtResource("1_lnon1")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(894, 325)
scale = Vector2(5, 5)
texture = ExtResource("2_1d34e")

[node name="TextureButton" type="TextureButton" parent="Sprite2D2"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -88.0
offset_right = -32.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_8anf8")
texture_pressed = ExtResource("4_51g7t")

[node name="Socket1" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(-23.5, -45.5)

[node name="Socket2" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(-0.5, -45.5)

[node name="Socket3" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(22.5, -45.5)

[node name="Socket4" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(39.5, -30.5)

[node name="Socket5" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(39.5, -7.5)

[node name="Socket6" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(39.5, 15.5)

[node name="Socket7" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(21.5, 30.5)

[node name="Socket8" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(-1.5, 30.5)

[node name="Socket9" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(-24.5, 30.5)

[node name="Socket10" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(-38.5, 15.5)

[node name="Socket11" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(-38.5, -7.5)

[node name="Socket12" parent="Sprite2D2" instance=ExtResource("6_slrjl")]
position = Vector2(-38.5, -30.5)

[node name="Cable" parent="." instance=ExtResource("6_gmmhb")]
position = Vector2(455, 492)
